--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=CreditCard
 
+# H2 Database
 spring.datasource.url=jdbc:h2:mem:creditcarddb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=creditcard
 spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
