--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mallikarjunaiah</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>creditcard</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CreditCard</name>
